[tool.poetry]
name = "cnb-tools"
version = "0.1.0"
description = "Convenience tools and functions for challenges and benchmarking"
authors = ["Verena Chung <9377970+vpchung@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cnb-tools = "cnb_tools.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
synapseclient = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
