[tool.poetry]
name = "cnb-tools"
version = "0.2.0"
description = "Convenience tools/functions for challenges and benchmarking on Synapse.org"
license = "Apache-2.0"
authors = ["Sage CNB Team <cnb@sagebase.org>"]
maintainers = [
    "Verena Chung <verena.chung@sagebase.org>",
]
readme = "README.md"
repository = "https://github.com/Sage-Bionetworks-Challenges/cnb-tools"
documentation = "https://sage-bionetworks-challenges.github.io/cnb-tools"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
synapseclient = "4.0.0"

[tool.poetry.scripts]
cnb-tools = "cnb_tools.main_cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Sage-Bionetworks-Challenges/cnb-tools/issues"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
termynal = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
