[project]
name = "cnb-tools"
version = "0.4.0"
description = "Convenience tools/functions for challenges and benchmarking on Synapse.org"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sage CNB Team", email = "cnb@sagebase.org"},
]
maintainers = [
    {name = "Verena Chung", email = "verena.chung@sagebase.org"},
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "synapseclient>=4.7.0",
    "click>=8.0.0,<8.2.0",
    "pandas>=2.0.3",
]

[project.scripts]
cnb-tools = "cnb_tools.main_cli:app"

[project.urls]
Repository = "https://github.com/Sage-Bionetworks-Challenges/cnb-tools"
Documentation = "https://sage-bionetworks-challenges.github.io/cnb-tools"
"Bug Tracker" = "https://github.com/Sage-Bionetworks-Challenges/cnb-tools/issues"

[dependency-groups]
test = ["pytest>=7.4.3", "pytest-cov>=4.0.0"]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "termynal>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
